[gd_scene load_steps=23 format=2]

[ext_resource path="res://MainMenu/Paused.png" type="Texture" id=1]
[ext_resource path="res://MainMenu/NewGame.png" type="Texture" id=2]
[ext_resource path="res://MainMenu/Menu.png" type="Texture" id=3]
[ext_resource path="res://Music and Sounds/Menu Select.wav" type="AudioStream" id=4]
[ext_resource path="res://MainMenu/Nute.png" type="Texture" id=5]
[ext_resource path="res://Paused_Joystick.gd" type="Script" id=6]
[ext_resource path="res://MainMenu/bionicle-training-card-font-2-4.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=25]
size = 14
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0, 0, 0, 0.196078 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0, 0, 0, 0.196078 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 32, 32 )
modulate_color = Color( 0.345098, 0.333333, 0.411765, 1 )

[sub_resource type="StyleBoxTexture" id=22]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 32, 32 )
modulate_color = Color( 0.290196, 0.278431, 0.333333, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=23]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 32, 32 )
modulate_color = Color( 0.815686, 0.815686, 0.815686, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=24]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 32, 32 )
modulate_color = Color( 0.815686, 0.815686, 0.815686, 1 )

[node name="Paused_Joystick" type="Node2D"]
pause_mode = 2
script = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 95.0
margin_top = 115.0
margin_right = 225.0
margin_bottom = 140.0

[node name="Resume_Button" type="Button" parent="MarginContainer"]
margin_right = 130.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 25 )
custom_styles/hover = SubResource( 26 )
custom_styles/pressed = SubResource( 27 )
custom_styles/normal = SubResource( 28 )
text = "Resume"

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 5.0
margin_top = -3.0
margin_right = 325.0
margin_bottom = 205.0
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="."]
margin_left = 110.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1
valign = 1

[node name="Resume1" type="Label" parent="."]
visible = false
margin_left = 110.0
margin_top = 116.0
margin_right = 210.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 21 )
align = 1
valign = 1

[node name="Resume2" type="Label" parent="."]
margin_left = 110.0
margin_top = 116.0
margin_right = 210.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 1 )
text = "Resume"
align = 1
valign = 1

[node name="Music1" type="Label" parent="."]
margin_left = 205.0
margin_top = 55.0
margin_right = 236.0
margin_bottom = 86.0
custom_styles/normal = SubResource( 6 )

[node name="Music2" type="Label" parent="."]
margin_left = 203.0
margin_top = 52.0
margin_right = 239.0
margin_bottom = 88.0
custom_styles/normal = SubResource( 7 )

[node name="Music3" type="Label" parent="."]
visible = false
margin_left = 203.0
margin_top = 52.0
margin_right = 239.0
margin_bottom = 88.0
custom_styles/normal = SubResource( 22 )

[node name="MainMenu1" type="Label" parent="."]
margin_left = 142.0
margin_top = 53.0
margin_right = 176.0
margin_bottom = 87.0
custom_styles/normal = SubResource( 11 )

[node name="MainMenu2" type="Label" parent="."]
margin_left = 140.0
margin_top = 52.0
margin_right = 177.0
margin_bottom = 89.0
custom_styles/normal = SubResource( 12 )

[node name="MainMenu3" type="Label" parent="."]
visible = false
margin_left = 140.0
margin_top = 52.0
margin_right = 177.0
margin_bottom = 89.0
custom_styles/normal = SubResource( 23 )

[node name="NewGame1" type="Label" parent="."]
margin_left = 81.0
margin_top = 55.0
margin_right = 114.0
margin_bottom = 88.0
custom_styles/normal = SubResource( 16 )

[node name="NewGame2" type="Label" parent="."]
margin_left = 79.0
margin_top = 54.0
margin_right = 115.0
margin_bottom = 90.0
custom_styles/normal = SubResource( 17 )

[node name="NewGame3" type="Label" parent="."]
visible = false
margin_left = 79.0
margin_top = 54.0
margin_right = 115.0
margin_bottom = 90.0
custom_styles/normal = SubResource( 24 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
